--- a/demo1.html
+++ b/demo1.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<script src="drag.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
 		<div></div>
