--- a/demo1.html
+++ b/demo1.html
@@ -4,8 +4,11 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<script src="drag.js" type="text/javascript" charset="utf-8"></script>
+		<style type="text/css">
+			#box{ width: 100px; height: 100px;}
+		</style>
 	</head>
 	<body>
-		<div></div>
+		<div id="box"></div>
 	</body>
 </html>
