--- a/demo1.html
+++ b/demo1.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<script src="drag.js" type="text/javascript" charset="utf-8"></script>
 		<style type="text/css">
-			#box{ width: 100px; height: 100px;}
+			#box{ width: 100px; height: 100px; background: red;}
 		</style>
 	</head>
 	<body>
